augmented z miss calculation

--- a/Cres_Shooter.ipynb
+++ b/Cres_Shooter.ipynb
@@ -55,11 +55,14 @@
     "    #Data mutable\n",
     "    Ad = pm.MutableData(rng.uniform(0, 100, 100))\n",
     "    Ah = pm.MutableData(rng.uniform(0, 100, 100))  # height of april tag in meters\n",
-    "    Vo = pm.Uniform('Vo', lower=0, upper=100)\n",
+    "    Vo = pm.Uniform('Vo', lower=4500, upper=6000)\n",
+    "    x = pm.MutableData(rng.uniform(0, 100, 100))  # x distance from shooter to target\n",
+    "    y = pm.MutableData(rng.uniform(0, 100, 100))  # y distance from shooter to target\n",
     "    #theta = pm.Uniform('theta', lower=-np.pi(), upper=np.pi(), transform='circular')\n",
     "    alphaA = pm.Uniform('alphaA', lower=-np.pi(), upper=np.pi(), transform='circular')\n",
     "    betaF = pm.Normal('BetaF', mu=0, sd=1) #BetaF is the conv to effective flap angle of the flaps from the center line of the shooter; assuming equal on both sides\n",
     "    alphaF = pm.Uniform('alphaF', lower=-np.pi(), upper=np.pi(), transform='circular')\n",
+    "    #alphaR is the angle of the centerline of the robot to the y axis (running from speaker to speaker on the field)\n",
     "    alphaR = pm.Uniform('alphaR', lower=-np.pi(), upper=np.pi(), transform='circular')\n",
     "\n",
     "    # use pathagorean theorem to solve for ground distance from april tag\n",
@@ -79,7 +82,13 @@
     "    #angular error to lead to horizontal error\n",
     "    #Talpha is the angle of the target from the center of the shooter\n",
     "    alphaFprime = betaF * alphaF * (1- alphaA/np.pi())\n",
-    "    Talpha = alphaR + alphaFprime\n",
+    "    alphaTraj = alphaR + alphaFprime\n",
+    "\n",
+    "    #true horizontal angle to the target\n",
+    "    Talpha = pm.math.arctan(x/y)\n",
+    "    #simplify miss distance as arc length using the \n",
+    "    missDist = (Talpha - alphaTraj) * pm.math.sqrt(h**2 + d**2)\n",
+    "\n",
     "\n",
     "\n"
    ]
